2011-07-03  Vsevolod Vlasov  <vsevik@chromium.org>

Reviewed by Alexey Proskuryakov.

        Web Inspector: Preflight OPTIONS requests are not shown on network panel for asynchronous XHRs.
        https://bugs.webkit.org/show_bug.cgi?id=63712

        * http/tests/inspector/network-preflight-options-expected.txt:
        * http/tests/inspector/network-preflight-options.html:
2011-07-03  Vsevolod Vlasov  <vsevik@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Web Inspector: Preflight OPTIONS requests are not shown on network panel for asynchronous XHRs.
        https://bugs.webkit.org/show_bug.cgi?id=63712

        Added InspectorInstrumentation calls to preflight OPTIONS requests callbacks in DocumentThreadableLoader.

        * loader/DocumentThreadableLoader.cpp:
        (WebCore::DocumentThreadableLoader::DocumentThreadableLoader):
        (WebCore::DocumentThreadableLoader::didReceiveResponse):
        (WebCore::DocumentThreadableLoader::didReceiveData):
        (WebCore::DocumentThreadableLoader::didFinishLoading):
        (WebCore::DocumentThreadableLoader::didFail):
        (WebCore::DocumentThreadableLoader::loadRequest):
        * loader/DocumentThreadableLoader.h:

Canonical link: https://commits.webkit.org/79606@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90340 268f45cc-cd09-0410-ab3c-d52691b4dbfc